# irom-tpu-tools

./: README.md  WORKLOG.md  pyproject.toml
src/irom_tpu_tools/: __init__.py  cli.py  config.py  jobs.py  ssh.py  tpu.py  watch.py
src/irom_tpu_tools/queue/: __init__.py  backend.py  cli.py  config.py  interactive.py  packaging.py  resources.yaml  scheduler.py  startup_script.py  types.py
src/openpi_tpu_tools/: cli.py  tpu.py  watch.py  watch_vis.py
tests/: test_queue_scheduler.py
