[project]
name = "irom-tpu-tools"
version = "0.1.0"
description = "Unified TPU utils and watch runner for v4/v5/v6"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
keywords = ["TPU", "gcloud", "tmux", "JAX"]
authors = [
  { name = "Lihan Zha" },
]

dependencies = [
  "rich>=14.0.0",
]

[project.scripts]
# Preferred short command
tpu = "irom_tpu_tools.cli:main"
# Backwards-compatible name
tpu-tools = "irom_tpu_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/irom_tpu_tools"]

[tool.hatch.build.targets.sdist]
include = [
  "src/irom_tpu_tools",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]


